# promptos

./: FOOTER-TEMPLATE.md  README.md  next.config.ts  package-lock.json  package.json
scripts/: tauri-build.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/api/auth/check/: route.ts
src/app/api/generate/: route.ts
src/app/api/usage/: route.ts
src/app/desktop/: page.tsx
src/components/: project-footer.tsx  prompt-card.tsx  usage-display.tsx
src/lib/: anthropic-client.ts  meta-prompts.ts  tauri.ts
