[package]
name = "promptos"
version = "0.1.0"
description = "Transform your vague ideas into perfectly crafted prompts for every major LLM"
authors = ["Deven Spear"]
edition = "2021"

[lib]
name = "promptos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
